0.03
 - Fix typo of variable in doc.

0.02 2023-11-18T18:56:29+01:00
 - Add doc.
 - Add serialize() example to doc.
 - Add support for length with blank string.

0.01 2023-11-18T01:17:56+01:00
 - First version.