@@ -1,4 +1,5 @@
 0.03
+ - Add example to doc for parse() and pretty print of object.
  - Fix typo of variable in doc.
 
 0.02 2023-11-18T18:56:29+01:00
